# auto_scholar

./: .gitignore  README.md  awards.json  build_page.py  pyproject.toml
src/auto_scholar/: __init__.py  builder.py  cli.py
