[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-scholar"
version = "0.1.0"
description = "Generate a publications page directly from Google Scholar."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Kazi Amit Hasan", email = "kaziamithasan89@gmail.com"}]
dependencies = [
    "scholarly>=1.7"
]

[project.urls]
"Homepage" = "https://github.com/YOUR_USERNAME/auto_scholar"
"Repository" = "https://github.com/YOUR_USERNAME/auto_scholar"

[project.scripts]
auto-scholar = "auto_scholar.cli:main"


